# chess

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FEATURE_CATALOG.md  README.md  change-log.md  run_tests.sh
.claude/: settings.json
.claude/hooks/: test_on_code_change.sh
.github/workflows/: tests.yml
data/raw/: fidegrandsw25.pgn  norway26.pgn
data/tournaments/candidates-2026-open/: round-01.pgn  round-02.pgn  round-03.pgn  round-04.pgn  round-05.pgn  round-06.pgn  round-07.pgn  (+6 more)
engine/: README.md  pyproject.toml
engine/chesslab/: __init__.py  aggregate.py  api.py  assembly.py  features.py  features.yaml  manifest.py  orchestrator.py  phase.py  pipeline.py  registry.py
engine/chesslab/catalog/: __init__.py  board.py  move.py
engine/chesslab/store/: __init__.py  base.py  file_store.py
engine/tests/: export_golden.py  golden_fens.py  test_aggregate.py  test_api.py  test_features.py  test_manifest.py  test_move.py  test_orchestrator.py  test_phase_features.py  test_pipeline.py  test_registry.py  test_store.py  test_structure.py
scripts/: annotate_eval.py  build_candidates.py  build_library.py  build_profiles.py
web/: index.html
web-next/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web-next/src/: App.tsx  chess-js.d.ts  index.css  main.tsx  types.ts
web/data/: candidates2026.json  library.json
web/src/: app.js  catalog.js  explain.js  highlights.js  parser.js  pieces.js  profiles.js
web/test/: analysis.test.mjs  library.test.mjs  modules.test.mjs  parity.mjs  parser.test.mjs  profiles.test.mjs
(+108 files in other folders)
